--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@mui/material": "^7.3.4",
     "@mui/x-charts": "^8.15.0",
     "@mui/x-date-pickers": "^8.16.0",
+    "@types/file-saver": "^2.0.7",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
